fix: 移除 vercel.json 的 routes，僅保留 rewrites；更新 .env 註解

--- a/.env.example
+++ b/.env.example
@@ -90,10 +90,10 @@ RAGIC_FIELD_PROGRESS_類型=1011707
 RAGIC_FIELD_PROGRESS_天數=1011708
 RAGIC_FIELD_PROGRESS_UPDATED_AT=1011709
 
-# 網址（部署後填寫）
+# 網址（部署到 Vercel 後填寫，例如 https://prayer-books.vercel.app）
 NEXT_PUBLIC_VERIFY_URL=
 NEXT_PUBLIC_BUY_BASE=
 API_BASE=
 
-# JWT 密鑰（驗證通過後發短期 token 用，可隨機字串）
+# JWT 密鑰（驗證通過後發短期 token 用；請產生隨機字串，例如終端機執行：openssl rand -hex 32）
 JWT_SECRET=
