--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "name": "prayer-handbook-assistant",
   "builds": [
     { "src": "api/**/*.js", "use": "@vercel/node" }
   ],
