feat: 驗證頁改由 API /api/serve-verify 提供，避免靜態檔 404；標題欄位改為 RAGIC_FIELD_CONTENT_TITLE

--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,7 @@ RAGIC_FIELD_CONTENT_書名=1011700
 RAGIC_FIELD_CONTENT_類型=1011701
 RAGIC_FIELD_CONTENT_天數=1011702
 RAGIC_FIELD_CONTENT_內容=1011703
+RAGIC_FIELD_CONTENT_TITLE=1011756
 
 # 閱讀進度欄位 ID
 RAGIC_FIELD_PROGRESS_LINE_UID=1011705
