fix: 根路徑與驗證頁改寫至 /api/serve-verify；新增部署保護與 404 檢查說明

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
   "version": 2,
-  "name": "prayer-handbook-assistant",
   "builds": [
     { "src": "api/**/*.js", "use": "@vercel/node" }
   ],
   "rewrites": [
-    { "source": "/liff/verify", "destination": "/liff/verify/index.html" },
-    { "source": "/liff/verify/", "destination": "/liff/verify/index.html" },
+    { "source": "/api/(.*)/", "destination": "/api/$1" },
+    { "source": "/", "destination": "/api/serve-verify" },
+    { "source": "/liff/verify", "destination": "/api/serve-verify" },
+    { "source": "/liff/verify/", "destination": "/api/serve-verify" },
     { "source": "/liff/buy", "destination": "/liff/buy/index.html" },
     { "source": "/liff/buy/", "destination": "/liff/buy/index.html" }
   ]
