--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,29 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/**/*.js", "use": "@vercel/node" }
-  ],
   "rewrites": [
-    { "source": "/api/(.*)/", "destination": "/api/$1" },
-    { "source": "/", "destination": "/api/serve-verify" },
-    { "source": "/liff/verify", "destination": "/api/serve-verify" },
-    { "source": "/liff/verify/", "destination": "/api/serve-verify" },
-    { "source": "/liff/buy", "destination": "/liff/buy/index.html" },
-    { "source": "/liff/buy/", "destination": "/liff/buy/index.html" }
+    {
+      "source": "/api/(.*)/",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/",
+      "destination": "/api/serve-verify"
+    },
+    {
+      "source": "/liff/verify",
+      "destination": "/api/serve-verify"
+    },
+    {
+      "source": "/liff/verify/",
+      "destination": "/api/serve-verify"
+    },
+    {
+      "source": "/liff/buy",
+      "destination": "/liff/buy/index.html"
+    },
+    {
+      "source": "/liff/buy/",
+      "destination": "/liff/buy/index.html"
+    }
   ]
 }
